short biography cut fix find first space, two scrollbars bug fixed style registration style in class core, Fixed rating image alignement in movies in lumiere.css

--- a/src/css/lumiere.css
+++ b/src/css/lumiere.css
@@ -177,7 +177,7 @@ padding:20px 20px 0 20px;float:left;}
 
 .imdbelementRATING {			/*RATING*/}
 
-.imdbelementRATING-picture {display:inline;}
+.imdbelementRATING-picture {vertical-align:baseline;display:inline;}
 
 .imdbelementGENRE {			/*GENRE*/}
 
